--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+* {
+  /* margin: 0 !important;
+  padding: 0 !important; */
+}
+
 .App {
-  text-align: center;
+  /* text-align: center; */
+  background-color: #282c34;
+  min-height: 100vh;
+  color: white;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
 }
 
 .App-logo {
@@ -14,14 +24,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  font-size: calc(1px + 2vmin);
+
+  /* flex-direction: column; */
+  /* align-items: center; */
+}
+
+.App-header div {
+  display: flex;
 }
 
 .App-link {
